Add text to audio component for narrative based on google speech. Small UI changes.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ db_data/
 # Environment variables
 .env
 
+# keystore files
+mythicnavigator-google-key.json
+
 # OS-specific files
 .DS_Store
 Thumbs.db
